# brain

./: .gitignore  CMakeLists.txt  brain.sln  brain.vcxproj  brain.vcxproj.filters  build.sh
Debug/: vc141.idb
Debug/brain.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  brain.lastbuildstate
Release/brain.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  brain.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
source/: PriorityQueue.cpp  PriorityQueue.h  main.cpp  neuro.cpp  qs_util.h  v2d_old.h
source/EngineModes/Brain/: Controller.cpp  Controller.h  Renderer.cpp  Renderer.h  State.cpp  State.h
source/EngineModes/Graph2d/: Controller.cpp  Controller.h  Renderer.cpp  Renderer.h  State.cpp  State.h
source/EngineModes/Mandelbrot/: Controller.cpp  Controller.h  Renderer.cpp  Renderer.h  State.cpp  State.h
source/archive/: int_list.h  math_util.h  sdl_util.h
source/engine/: Complex.cpp  Complex.h  EngineModeController.h  ImageBuffer.cpp  ImageBuffer.h  Painter.cpp  Painter.h  Pixel.cpp  Pixel.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Viewport.cpp  Viewport.h  v2d_t.cpp  v2d_t.h
source/include/: int_list.h  math_util.h  qs_util.h  sdl_util.h  stopwatch.h  v2d.h
